--- a/miniMIPS/miniMIPS.sim/sim_1/behav/xsim/xsim.dir/ShiftL2_tb_behav/webtalk/usage_statistics_ext_xsim.html
+++ b/miniMIPS/miniMIPS.sim/sim_1/behav/xsim/xsim.dir/ShiftL2_tb_behav/webtalk/usage_statistics_ext_xsim.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2729669</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sat May 30 17:14:01 2020</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sat May 30 20:11:35 2020</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>XSIM v2019.2.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>ca313ae86a69404cadb29348d52a655f</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>b3d857a7-d0cd-4121-848a-144876ce72c5</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>b3d857a7-d0cd-4121-848a-144876ce72c5</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>FALSE</TD>
@@ -35,27 +35,17 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>command=xelab</TD>
-    <TD>debug=typical</TD>
-    <TD>dpi_used=false</TD>
-    <TD>file_counter=6</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gendll=false</TD>
-    <TD>hwcosim=false</TD>
-    <TD>sdfmodeling=false</TD>
-    <TD>vhdl2008=false</TD>
+<TR ALIGN='LEFT'>    <TD>command=xsim</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>compiler_memory=222012_KB</TD>
-    <TD>compiler_time=1.98_sec</TD>
-    <TD>simulation_image_code=13 KB</TD>
-    <TD>simulation_image_data=2 KB</TD>
-</TR><TR ALIGN='LEFT'>    <TD>total_instances=5</TD>
-    <TD>total_nets=0</TD>
-    <TD>total_processes=2</TD>
-    <TD>xilinx_hdl_libraries_used=secureip </TD>
+<TR ALIGN='LEFT'>    <TD>iteration=0</TD>
+    <TD>runtime=1 us</TD>
+    <TD>simulation_memory=125676_KB</TD>
+    <TD>simulation_time=0.05_sec</TD>
+</TR><TR ALIGN='LEFT'>    <TD>trace_waveform=true</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
