--- a/miniMIPS/miniMIPS.sim/sim_1/behav/xsim/xsim.dir/Manager_tb_behav/webtalk/usage_statistics_ext_xsim.html
+++ b/miniMIPS/miniMIPS.sim/sim_1/behav/xsim/xsim.dir/Manager_tb_behav/webtalk/usage_statistics_ext_xsim.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2729669</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Fri May 29 21:00:17 2020</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sat May 30 23:32:43 2020</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>XSIM v2019.2.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>ca313ae86a69404cadb29348d52a655f</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>6</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>b3d857a7-d0cd-4121-848a-144876ce72c5</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>b3d857a7-d0cd-4121-848a-144876ce72c5</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>FALSE</TD>
@@ -36,16 +36,15 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>command=xsim</TD>
-    <TD>runall=true</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>iteration=0</TD>
-    <TD>runtime=97818960 ns</TD>
-    <TD>simulation_memory=134528_KB</TD>
-    <TD>simulation_time=68.27_sec</TD>
+<TR ALIGN='LEFT'>    <TD>iteration=1</TD>
+    <TD>runtime=800500 ns</TD>
+    <TD>simulation_memory=134540_KB</TD>
+    <TD>simulation_time=0.51_sec</TD>
 </TR><TR ALIGN='LEFT'>    <TD>trace_waveform=true</TD>
 </TR>   </TABLE>
    </TD></TR>
